fix overlay text alignment

--- a/style.css
+++ b/style.css
@@ -67,8 +67,8 @@ body {
 .overlay-text {
     position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    bottom: 50%;
+    transform: translate(100%, 100%);
     font-size: 4vh;
     font-weight: bold;
     color: #ffffff;
